--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,6 @@
 <div class="coins-to-insert">
   <button (click)="insertCoin('NICKEL')">NICKEL</button>
   <button (click)="insertCoin('DIME')">DIME</button>
-  <button (click)="insertCoin('NICKEL')">QUARTER</button>
+  <button (click)="insertCoin('QUARTER')">QUARTER</button>
 </div>
 
