Added product selection

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,3 +6,4 @@
 </div>
 <div class="vending-machine-display">{{display}}</div>
 <app-coin-slot (onCoinInserted)="onCoinInserted($event)"></app-coin-slot>
+<app-product-selection (onProductSelected)="vendingMachineService.selectProduct($event)"></app-product-selection>
