--- a/src/app/coin-slot/coin-slot.component.html
+++ b/src/app/coin-slot/coin-slot.component.html
@@ -1,3 +1,5 @@
-<button (click)="insertCoin('NICKEL')">NICKEL</button>
-<button (click)="insertCoin('DIME')">DIME</button>
-<button (click)="insertCoin('QUARTER')">QUARTER</button>
+<div>
+  <button (click)="insertCoin('NICKEL')">NICKEL</button>
+  <button (click)="insertCoin('DIME')">DIME</button>
+  <button (click)="insertCoin('QUARTER')">QUARTER</button>
+</div>
