--- a/src/app/coin-slot/coin-slot.component.html
+++ b/src/app/coin-slot/coin-slot.component.html
@@ -1,5 +1,10 @@
-<div>
-  <button (click)="insertCoin('NICKEL')">NICKEL</button>
-  <button (click)="insertCoin('DIME')">DIME</button>
-  <button (click)="insertCoin('QUARTER')">QUARTER</button>
+<div class="coin-slot-container">
+  <h3>
+    Coin Slot
+  </h3>
+  <div>
+    <button (click)="insertCoin('NICKEL')">NICKEL</button>
+    <button (click)="insertCoin('DIME')">DIME</button>
+    <button (click)="insertCoin('QUARTER')">QUARTER</button>
+  </div>
 </div>
