--- a/src/app/display/display.component.html
+++ b/src/app/display/display.component.html
@@ -1,1 +1,4 @@
-<div>{{currentDisplayMessage}}</div>
+<div class="dispenser-container">
+  <h3>Display panel</h3>
+  <div>{{currentDisplayMessage}}</div>
+</div>
