--- a/src/app/product-selection/product-selection.component.html
+++ b/src/app/product-selection/product-selection.component.html
@@ -1,5 +1,10 @@
-<div>
-  <button (click)="selectProduct('CHIPS')">SELECT CHIPS</button>
-  <button (click)="selectProduct('COLA')">SELECT COLA</button>
-  <button (click)="selectProduct('CANDY')">SELECT CANDY</button>
+<div class="product-selection-container">
+  <h3>
+    Product Selection
+  </h3>
+  <div>
+    <button (click)="selectProduct('CHIPS')">SELECT CHIPS</button>
+    <button (click)="selectProduct('COLA')">SELECT COLA</button>
+    <button (click)="selectProduct('CANDY')">SELECT CANDY</button>
+  </div>
 </div>
