--- a/src/app/coin-slot/coin-slot.component.html
+++ b/src/app/coin-slot/coin-slot.component.html
@@ -3,8 +3,9 @@
     Coin Slot
   </h3>
   <div>
-    <button (click)="insertCoin('NICKEL')">NICKEL</button>
-    <button (click)="insertCoin('DIME')">DIME</button>
-    <button (click)="insertCoin('QUARTER')">QUARTER</button>
+    <button (click)="insertCoin('PENNY')">INSERT PENNY</button>
+    <button (click)="insertCoin('NICKEL')">INSERT NICKEL</button>
+    <button (click)="insertCoin('DIME')">INSERT DIME</button>
+    <button (click)="insertCoin('QUARTER')">INSERT QUARTER</button>
   </div>
 </div>
