--- a/src/app/display/display.component.html
+++ b/src/app/display/display.component.html
@@ -1,4 +1,6 @@
-<div class="dispenser-container">
+<div class="display-container">
   <h3>Display panel</h3>
-  <div>{{currentDisplayMessage}}</div>
+  <div class="message-display" #scrollMe>
+    <div *ngFor="let message of messages">{{message}}</div>
+  </div>
 </div>
