--- a/src/app/display/display.component.scss
+++ b/src/app/display/display.component.scss
@@ -2,7 +2,7 @@
     .message-display {
         border: 1px solid lightgray;
         padding: .3rem;
-        max-height: 3.3rem;
+        height: 3.3rem;
         overflow-y: auto;
         div {
             padding-left: 0.1rem;
